--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,17 @@
     "minimum-stability": "stable",
     "autoload": {
         "psr-4": {
-            "ArchitectNate\\FbMessengerSDK": "src/"
+            "ArchitectNate\\FbMessengerSDK\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
         }
     },
     "require": {},
     "require-dev": {
-        "laravel/homestead": "^7.9"
+        "laravel/homestead": "^7.9",
+        "phpunit/phpunit": "^7.2"
     }
 }
