--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
             "email": "sepulveda523+code@gmail.com"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "autoload": {
         "psr-4": {
             "ArchNate\\MessengerSdk\\": "src/"
@@ -22,7 +22,8 @@
     },
     "require": {
         "php": "^7.2",
-        "danielstjules/stringy": "~3.1.0"
+        "danielstjules/stringy": "~3.1.0",
+        "guzzlehttp/guzzle": "~6.3.3"
     },
     "require-dev": {
         "laravel/homestead": "^7.9",
