--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     "require": {
         "php": "^7.2",
         "danielstjules/stringy": "~3.1.0",
-        "guzzlehttp/guzzle": "~6.3.3"
+        "guzzlehttp/guzzle": "~6.3.3",
+        "tightenco/collect": "~5.6.27"
     },
     "require-dev": {
         "laravel/homestead": "^7.9",
